Commit with 2 machines chat allowed

--- a/TextChatDemo/Views/Home/Index.cshtml
+++ b/TextChatDemo/Views/Home/Index.cshtml
@@ -7,6 +7,28 @@
 
 <html>
 <head>
+
+    <!--Start of Zendesk Chat Script-->
+    <script type="text/javascript">
+        window.$zopim || (function (d, s) {
+            var z = $zopim = function (c) { z._.push(c) }, $ = z.s =
+                d.createElement(s), e = d.getElementsByTagName(s)[0]; z.set = function (o) {
+                    z.set.
+                        _.push(o)
+                }; z._ = []; z.set._ = []; $.async = !0; $.setAttribute("charset", "utf-8");
+            $.src = "https://v2.zopim.com/?6YFJsjZMNLDw4lzzjo4dVsAUEAh9IaoK"; z.t = +new Date; $.
+                type = "text/javascript"; e.parentNode.insertBefore($, e)
+        })(document, "script");
+    </script>
+
+
+    <!--End of Zendesk Chat Script-->
+    <!-- Start of  Zendesk Widget script -->
+    <!--https://sbdcshubham.zendesk.com/chat/agent#home -->
+    <!--https://dashboard.zopim.com/#home-->
+    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=35346879-b8bd-405e-9d6d-b2a012ca5a07"></script>
+    <!-- End of  Zendesk Widget script -->
+
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     @Styles.Render("~/Content/css")
@@ -93,11 +115,12 @@
     {
         <div class="container">
             <div class="row">
-
+              
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="form-group">
+                       
                         <select id="ddlfriend" name="ddlfriend" class="form-control"></select>
                     </div>
                     <div class="form-group">
